# Qwen3Audio

./: .gitignore  HANDOFF.md  README.md  build_exe.bat  build_exe.sh  download_models.py  main.py  offline_start.bat  offline_start.sh  pyproject.toml  qwen3_tts.spec  requirements.txt  start.bat  start.sh
app/: __init__.py  config.py  model_manager.py  style.css  tts_engine.py  ui.py
docs/: STREAMING_PLAN_A_QWEN_TTS.md  STREAMING_PLAN_B_VLLM_OMNI.md
