[project]
name = "qwen3-tts-ui"
version = "0.1.0"
description = "Gradio UI entry point for Qwen3-TTS"
requires-python = ">=3.10"
dependencies = [
    "qwen-tts",
    "torch",
    "soundfile",
    "gradio>=4.0",
    "huggingface_hub",
]

[project.optional-dependencies]
flash-attn = ["flash-attn"]
modelscope = ["modelscope"]

[project.scripts]
qwen3-tts-ui = "main:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"
